--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
             "type": "image/png"
         }
     ],
-	"shortcuts": [
+    "shortcuts": [
     {
       "name": "Open Schön Quotes",
       "short_name": "Schön Quotes",
@@ -29,7 +29,7 @@
       "icons": [{ "src": "https://raw.githubusercontent.com/sam-tj/sam-tj.github.io/master/schon_quotes/icons/Icon-192.png", "sizes": "192x192" }]
     },
 	{
-      "name": "Open Xylophone",
+      "name": "Play Xylophone",
       "short_name": "Xylophone",
       "description": "Xylophone by Sam",
       "url": "/xylophone/",
@@ -41,6 +41,13 @@
       "description": "Roll Dice",
       "url": "/dice_app/",
       "icons": [{ "src": "https://raw.githubusercontent.com/sam-tj/sam-tj.github.io/master/dice_app/icons/Icon-512.png", "sizes": "192x192" }]
-    }
-  ] 
+    },
+	{
+      "name": "Cal Ver Tor",
+      "short_name": "Cal Ver Tor",
+      "description": "Calculator and Unit converter by Sameer Tuteja",
+      "url": "/projects/cal_ver_tor/",
+      "icons": [{ "src": "https://raw.githubusercontent.com/sam-tj/sam-tj.github.io/master/dice_app/icons/Icon-512.png", "sizes": "192x192" }]
+    },
+  ]  
 }
