--- a/projects/cal_ver_tor/manifest.json
+++ b/projects/cal_ver_tor/manifest.json
@@ -30,7 +30,7 @@
             "name": "Open Unit Converter",
             "short_name": "Unit Converter",
             "description": "Calculator and Unit converter by Sameer Tuteja",
-            "url": "/converter",
+            "url": "/projects/cal_ver_tor/#/converter",
             "icons": [
                 {
                     "src": "https://raw.githubusercontent.com/sam-tj/sam-tj.github.io/master/projects/cal_ver_tor/icons/Icon-192.png",
